# Handy

algorithm/: is_prime.h
c/container/: CMakeLists.txt  deque.c  deque.h  list.c  list.h  queue.c  queue.h  set.c  set.h  shared_types.h  stack.c  stack.h  tree.c  tree.h  vector.c  vector.h
c/container/test/: list_test.cpp  queue_test.cpp  set_test.cpp  stack_test.cpp  tree_test.cpp
c/util/: util.c  util.h
cxx/stl/: CMakeLists.txt  container_helper.hpp  print_elements.h  vector_helper.h
cxx/stl/test/: helper_test.cpp
node/simple-promise/: deferred.js  promise.js  promise_api.js  test.js
